# AdventOfCode

./: .gitignore  README.md
2024/day1/cmd/distance/: main.go
2024/day1/cmd/similarity/: main.go
2024/day2/cmd/safecount/: main.go
2024/day2/internal/report/: report.go
2024/go/: .gitignore  README.md  Taskfile.yml  go.mod  main.go
2024/go/day1/: go.mod  notes.txt
2024/go/day2/: go.mod
2024/go/day2/internal/parser/: parser.go
2024/go/day3/: go.mod
2024/go/day3/cmd/cli/: main.go
2024/go/solutions/: day01.go  day01_test.go  day02.go  day02_test.go  day03.go  day03_test.go  day06.go  day06_test.go
2024/inputs/puzzles/: 06.md
2024/ocaml/: dune-project
2024/ocaml/lib/: dune  en.mli  utils.ml
2024/ocaml/solutions/: day01.ml  day02.ml  day03.ml
2024/python/: main.py  pyproject.toml
2024/python/solutions/: day06.py
2024/zig/: .gitignore  build.zig.zon
2025/inputs/puzzles/: day05.md
2025/python/: main.py  pyproject.toml
2025/python/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py
2025/rust/: Cargo.toml  README.md
2025/rust/.cargo/: config.toml
historian_go_1/: go.mod  main.go
historian_go_1/cmd/distance/: main.go
historian_go_1/cmd/similarity/: main.go
historian_go_1/internal/parser/: parser.go
rednose_go_2/: .gitignore  go.mod
rednose_go_2/cmd/safecount/: main.go
rednose_go_2/internal/parser/: parser.go
