[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "ruff>=0.12.7",
]

[tool.basedpyright]
typeCheckingMode="off"
reportUndefinedVariable=true
