[project]
name = "aoc2025"
version = "1.0.0"
description = "Advent of code solutions 2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "ruff>=0.12.7",
]

[tool.basedpyright]
typeCheckingMode="basic"
